# Snake-Game

./: README.md  pyproject.toml  requirements.txt
src/snake_game/: __init__.py  config.py  engine.py  main.py  turtle_ui.py
tests/: test_engine.py
